<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">躁动</string>

    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_text">Simple Dialog</string>

    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>

    <string name="activity_a_label">Activity A</string>
    <string name="activity_b_label">Activity B</string>
    <string name="activity_c_label">Activity C</string>

    <string name="btn_start_a_label">Start A</string>
    <string name="btn_start_b_label">Start B</string>
    <string name="btn_start_c_label">Start C</string>
    <string name="btn_start_dialog_label">Dialog</string>

    <string name="btn_finish_a_label">Finish A</string>
    <string name="btn_finish_b_label">Finish B</string>
    <string name="btn_finish_c_label">Finish C</string>
    <string name="btn_finish_dialog_label">Close</string>

    <string name="on_activity_created">onActivityCreated</string>
    <string name="on_attach">onAttach</string>
    <string name="on_create_view">onCreateView</string>
    <string name="on_destroy_view">onDestroyView</string>
    <string name="on_detach">onDetach</string>
    <string name="on_view_created">onViewCreated</string>
    <string name="activity_a">Activity A</string>

    <string name="start_a">Start A</string>
    <string name="start_b">Start B</string>
    <string name="start_c">Start C</string>

    <string name="close">Close</string>
    <string name="dialog">Dialog</string>
    <string name="haidaobiaoti">海盗团队</string>
    <string name="yourID">账号</string>
    <string name="yourPasswd">密码</string>
    
         <string name="content_text01">October</string>
    <string name="content_text10">October 27, 2012</string>
    <string name="content_text02">27, 2012</string>
    <string name="content_text03">匿名即地狱</string>
    <string name="content_text04">by Fenng</string>
    <string name="content_text05">潘海天，科幻小说家</string>
    <string name="content_text06">TextView</string>
    <string name="content_text07">飞机失事前真的会让人写遗书吗？真的会吗？？</string>
    <string name="content_text08">萨斯大师大师被打死的表述的表述租房vuzfygayufayusgfausfgaisfgaisf的表示对巴萨的巴斯的巴斯的表述的表述的表述的便是的吧</string>
    <string name="content_text09">飞机失事前真的会让人写遗书吗？真的会吗？？</string>
    
    <string name="stowID">ID</string>
<string name="stow">收藏</string>
<string name="stowTime">Make_Time</string>
     <string name="homepage_text04">29</string>
     <string name="oneImageDate">Dec,2013</string>
     <string name="valNum">VOL.448</string>
     <string name="oneImageName">迷鹿</string>
     <string name="oneImageAuthor">By Fenng</string>
     <string name="oneImageContent">.................................................................................................
         ............................................................................................................................
         ............................................................................................................................
         ............................................................................................................................
         .......................................</string>
     
     <string name="question_publish_time">January 01,2014</string>
     <string name="question_title">你的新年愿望是什么？</string>
     <string name="question_content">【海盗团队】问：你的新年愿望是什么？</string>
     <string name="question_answer_title">海盗团队成员答：</string>
     <string name="question_answer_content">小饭：新的一年，不以物喜，不以己悲，不以丧失，不以生活。
		     	可不可以买你的不快乐，我们一起唱歌、一起牵手、一起听音乐，把你的不快乐卖给我，然后抱一下，好不好
         	可不可以买你的不快乐，我们一起唱歌、一起牵手、一起听音乐，把你的不快乐卖给我，然后抱一下，好不好
				可不可以买你的不快乐，我们一起唱歌、一起牵手、一起听音乐，把你的不快乐卖给我，然后抱一下，好不好
				大家好，我是hobo

小饭：新的一年，不以物喜，不以己悲，不以丧失，不以生活。
		     	可不可以买你的不快乐，我们一起唱歌、一起牵手、一起听音乐，把你的不快乐卖给我，然后抱一下，好不好
         	可不可以买你的不快乐，我们一起唱歌、一起牵手、一起听音乐，把你的不快乐卖给我，然后抱一下，好不好
				可不可以买你的不快乐，我们一起唱歌、一起牵手、一起听音乐，把你的不快乐卖给我，然后抱一下，好不好
				大家好，我是hobo

</string>
	 <string name="set">分享设置</string>
     <string name="microblog">我们的微信</string>
     <string name="aboutString">关于躁动 iRecords</string>
	 <string name="copyright">关于一篇</string>
	 <string name="night_model">夜间模式</string>
	   <string name="recommend">推荐应用</string>
	   <string name="details_text04">正在加载......</string>
     <string name="contentLong" >
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         	。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
			。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。
         </string>
         <string name="oneselfItem">新浪微博</string>
    <string name="oneselfItem2">腾讯微博</string>
    <string name="oneselfItem3">人人</string>
        <string name="about_ours">关注我们</string>
        <string name="join_us">
            躁动（iRecords）——互联网日记。 \n一款面向互联网爱好者的产品， 记录互联网大事的图片， 标记互联网浪潮的文章，铭刻互联网巅峰的精彩问答。海盗团队不求用户量，只求能为互联网人群做出一些有意义的事，能够给一些人带来启迪。
	\n
            请关注我们的微信公众账号：iRecords</string>
        <string name="about_zaodong">       躁动(iRecords)——互联网日记。                                 是一款面向互联网爱好者的产品，
            	记录互联网大事的图片，标记互联网浪潮的文章，铭刻互联网巅峰的精彩问答。海盗团队不求用户量，只求能为互联网人群做出一些有意义的事，能够给一些人带来启迪。
            	(上图为：1986年8月25日，中科院吴为民发出中国第一封电子邮件，在互联网上走了6天才到达瑞士。)
</string>
        
            <string name="go_grade">去评分</string>
    <string name="about_copyright">版本信息</string>
    <string name="feedback">用户反馈</string>
    


        <string name="aboutname">关注</string>
        <string name="qa_people_like_num">1900</string>
        <string name="contactus">联系我们</string>
        <string name="feedback_content">感谢你使用躁 动·互联网日记，你可以在此反馈应用改进的意见和建议</string>
        <string name="feedback_email">Email:</string>
        <string name="feedback_phone">电话:</string>
        <string name="feedback_text">反馈内容:</string>
        <string name="feedback_null"></string>
        <string name="feedback_submit">提交</string>
        <string name="share">躁动 (互联网日记)</string>
        
            <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
