<?xml version="1.0" encoding="utf-8"?>

		  
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/homeScrollView" 
	    android:layout_width="fill_parent"
	    android:background="#FFFFFF"
	    android:layout_height="fill_parent"
	>

<LinearLayout
    android:id="@+id/home_page_item_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"

    android:orientation="vertical" >

<include android:id="@id/question_title" android:layout_alignParentTop="true" layout="@layout/one_title" />
	
                    
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/fPage_tView"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:gravity="left|center"
                   android:textColor="@color/one_textcolor"
                   android:textSize="13.0sp" 
                   android:visibility="gone"/>

            </LinearLayout>        
                    
                    
  
        
	     <FrameLayout
	         android:layout_width="fill_parent"
	         android:layout_height="fill_parent" >

	      <FrameLayout
	          android:id="@+id/imageLoading"
	          android:layout_width="fill_parent"
	          android:layout_height="200dp"
	          android:background="@color/welcomeBackground"
	           android:visibility="gone" >

	          <ProgressBar
	              android:id="@+id/progressBar"
	              style="@style/newProgressBar"
	              android:layout_width="40dp"
	              android:layout_height="40dp"
	              android:layout_gravity="center" />

	      </FrameLayout>
	         <ImageView
	             android:id="@+id/imageView1"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:adjustViewBounds="true"
	             android:contentDescription="@null"
	             android:src="@drawable/one_image_dev"
	            
	             />

	     

	        </FrameLayout>
        <TextView android:textSize="14.0sp" android:textColor="@color/home_page_author" android:gravity="right|center" android:id="@+id/imageBelow_tView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/oneImageName"/>
        <TextView android:textColor="@color/home_page_author" android:gravity="right|center" android:id="@+id/imageBelow_tView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/oneImageAuthor" />
        <LinearLayout android:orientation="horizontal" android:id="@+id/feedback_contactus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="8.0dip">
            <RelativeLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-6.0dip">
                <TextView android:textSize="36.0sp" android:textStyle="bold" android:textColor="@color/skyblue" android:gravity="bottom|left|center" android:id="@+id/date_tView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/homepage_text04" />
                <TextView android:textSize="12.0sp" android:textColor="@color/home_page_date" android:gravity="top|left|center" android:id="@+id/date1_tView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dip" android:text="@string/oneImageDate" />
            </RelativeLayout>
            <TextView android:textColor="@color/white" android:gravity="left" android:layout_gravity="right" android:id="@id/new_tView" android:background="@drawable/one_home_page_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingMultiplier="1.3"  />
        </LinearLayout>
        <TextView android:id="@+id/home_datetime" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
   		 <LinearLayout
            android:id="@+id/laud_layout"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:orientation="horizontal"
             >
			<!--  
            <LinearLayout
                android:id="@+id/laud_click_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView android:layout_gravity="center" android:id="@+id/laud_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/laud" android:contentDescription="@null" />
           		
                </LinearLayout>
                <TextView android:textColor="@color/one_textcolor" android:gravity="center" android:layout_gravity="center" android:id="@+id/laud_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qa_people_like_num" />
        	-->
            </LinearLayout>
        <TextView android:visibility="invisible"  android:id="@+id/home_share_url"   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"  />
       	 <TextView
                   android:id="@+id/home_id"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:visibility="invisible"  
		 />
        </LinearLayout>
       
</ScrollView>

 	
