<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/setitem" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/oneDetailsPageSet" android:background="@drawable/one_title_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/one_textcolor" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="18.0dip" android:src="@drawable/one_title" android:text="@string/set" android:layout_centerInParent="true" />
        <LinearLayout android:id="@+id/returnShareSet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerInParent="true">
            <ImageView android:layout_gravity="left|center" android:id="@+id/imageset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="8.0dip" android:src="@drawable/return_button" android:contentDescription="@null" android:onClick="returnOnClick"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/oneDetailsPageSet">
        <ImageView android:id="@+id/oneDetailsPageSet_Line1" android:background="@color/darkgray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="14.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="14.0dip" android:contentDescription="@null" />
        <RelativeLayout android:background="@drawable/one_list_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:onClick="sineMicroBlogOnClick">
            <LinearLayout android:id="@+id/shareSet_linearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/one_textcolor" android:gravity="center" android:id="@+id/sina_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/oneselfItem" />
            </LinearLayout>
            <ImageView android:id="@+id/oneDetailsPage_arrowhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:src="@drawable/one_details_page_arrowhead" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:contentDescription="@null" />
        </RelativeLayout>
        <ImageView android:id="@+id/oneDetailsPage_Line2" android:background="@color/darkgray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:contentDescription="@null" />
        <RelativeLayout android:background="@drawable/one_list_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:onClick="tencentMicroBlogOnClick">
            <LinearLayout android:id="@+id/microBolg_linearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/one_textcolor" android:gravity="center" android:id="@+id/microblog_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/oneselfItem2" />
            </LinearLayout>
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:src="@drawable/one_details_page_arrowhead" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:contentDescription="@null" />
        </RelativeLayout>
        <ImageView android:id="@+id/oneDetailsPage_Line3" android:background="@color/darkgray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:contentDescription="@null" />
        <RelativeLayout android:background="@drawable/one_list_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:onClick="rennMicroBlogOnClick">
            <LinearLayout android:id="@+id/renn_linearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/one_textcolor" android:gravity="center" android:id="@+id/renn_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/oneselfItem3" />
            </LinearLayout>
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:src="@drawable/one_details_page_arrowhead" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:contentDescription="@null" />
        </RelativeLayout>
        <ImageView android:id="@+id/oneDetailsPage_Line4" android:background="@color/darkgray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:contentDescription="@null" />
    </LinearLayout>
</RelativeLayout>
